--- a/css/overrides.css
+++ b/css/overrides.css
@@ -5,3 +5,14 @@
 .reveal .cite {
     font-size: 70%;
 }
+
+.pour p {
+    font-size: 200%;
+    text-align: left;
+    margin-left: 300px;
+}
+.pour .pourLetter {
+    font-size: 200%;
+    font-weight: 700;
+    margin-right: 15px;
+}
